Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants

TODO: ae::stritc, regulalry check for invalid fds?
TOOD: stop internals abusing
TODO: add google ipv6 public dns
	- INCOMPATIBLE CHANGE: the default log level is now "3" (critical
          and above), and some emssages inside AnyEvent have bene elevated
          to critical, so.
	- give guidelines on how to chose a logging level.
	- increase signal latency test timer considerably for poor little osx.
        - mention some debugging aids in the tutorial.

6.02  Fri Aug 26 20:08:31 CEST 2011
        - log_to_syslog now accepts facility strings.
	- log_to_syslog would not allow facilities - "$facility|$level"
          *literally* means that string. sheesh.
        - the CPAN parser got confused and thought we provide Sys::Syslog, try
          to work around.
        - renamed AnyEvent::Impl::FLTK2 to FLTK.

6.01  Fri Aug 26 07:04:11 CEST 2011
        - INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
          the TTL as fourth element - this affects ->resolve, ->request
          and ->dns_unpack indirectly. Convenience functions such as
          AnyEvent::DNS::{a,txt,mx,srv} are not affected, neither is
          AnyEvent::Socket.
        - INCOMPATIBLE CHANGE: backend authors now should not implement
          one_event or loop, but instead the AnyEvent::CondVar::_wait and _poll
          methods.
        - INCOMPATIBLE CHANGE: verbosity levels have been redefined, see
          AnyEvent (PERL_ANYEVENT_VERBOSE) and AnyEvent::Log for details.
        - DEPRECIATION: please change
          "use AnyEvent::Impl::Perl" to "use AnyEvent::Loop" and
          "AnyEvent::Impl::Perl::loop" to "AnyEvent::Loop::run"
          in your programs, for future compatibility.
        - *blush* idle watcher emulation was borked.
        - AnyEvent::Strict now checks the AE::xxx functions as well.
        - querying too long domain names would barf deep inside AnyEvent::DNS - since