@@ -2,12 +2,15 @@ Revision history for Perl extension AnyEvent.
 
 TODO: document TCP_*** constants
 
-TODO: ae::stritc, regulalry check for invalid fds?
+TODO: ae::strict, regulalry check for invalid fds?
 TOOD: stop internals abusing
 TODO: add google ipv6 public dns
 	- INCOMPATIBLE CHANGE: the default log level is now "3" (critical
           and above), and some emssages inside AnyEvent have bene elevated
           to critical, so.
+        - add google public ipv6 dns as flalback servers, so AE::DNS can finally
+          support ipv6-only operation even with defaults (also use ::1 instead
+          of 127.0.0.1).
 	- give guidelines on how to chose a logging level.
 	- increase signal latency test timer considerably for poor little osx.
         - mention some debugging aids in the tutorial.
